# nimbus-data

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer-lock.json  devcontainer.json
consumer/: Cargo.toml
consumer/src/: main.rs
k8s/: consumer-deployment.yaml  kind-config.yaml  producer-deployment.yaml
k8s/monitoring/: alerts.yaml  consumer-podmonitor.yaml  kafka-exporter-podmonitor.yaml  producer-podmonitor.yaml
kafka/: kafka-cluster.yaml
producer/: Cargo.toml
producer/src/: main.rs
