[package]
name = "producer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rand = "0.10.1"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
